--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -5,5 +5,5 @@
 	xmlns:p="http://primefaces.org/ui"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
     xmlns:c="http://java.sun.com/jstl/core">
-    <p:menubar model="#{menuBean.model}"/>
+    <p:menubar model="#{loginBean.model}"/>
 </ui:composition>
