--- a/src/main/webapp/admin/menu/menu_read.xhtml
+++ b/src/main/webapp/admin/menu/menu_read.xhtml
@@ -8,7 +8,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<head>
-		<title>Concursos</title>
+		<title>Provas</title>
 	</head>
 	
 	<body>
