--- a/src/main/webapp/login_error.xhtml
+++ b/src/main/webapp/login_error.xhtml
@@ -4,12 +4,12 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	
 	<h:head>
-		<title>Concursos</title>
+		<title>Provas</title>
 	</h:head>
 	<h:body>
 		<h2>Erro no login</h2>
 		<p>Usuário ou senha inválidos</p>
-		<a href="/concursos/index.xhtml">Voltar</a>
+		<a href="/provas/index.xhtml">Voltar</a>
 	</h:body>
 	
 </html>
