--- a/src/main/webapp/user/dashboard.xhtml
+++ b/src/main/webapp/user/dashboard.xhtml
@@ -8,7 +8,7 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	
 	<h:head>
-		<title>Concursos</title>
+		<title>Provas</title>
 	</h:head>
 	<h:body>
 		<h:form>
