--- a/src/main/webapp/admin/menu/menu_read.xhtml
+++ b/src/main/webapp/admin/menu/menu_read.xhtml
@@ -7,16 +7,13 @@
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<head>
+	<h:head>
 		<title>Provas</title>
-	</head>
-	
-	<body>
+	</h:head>
+	<h:body>
 		<h:form>
-			<ui:include src="menu.xhtml"/>
-			<p:panel id="panel" header="Menu">
-			</p:panel>
+			<ui:include src="/menu.xhtml"/>
 		</h:form>
-	</body>
+	</h:body>
 
 </html>
