--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,7 +12,7 @@
 </h:head>
 <h:body>
 	<h:form>
-		<ui:include src="menu.xhtml"/>
+		<ui:include src="/menu.xhtml"/>
 		<p:panel id="panel" header="Login">
 			<p:messages id="messages" />
 			<h:panelGrid columns="2" cellpadding="5">
