--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,17 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/WEB-INF/templates/template.xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:adm="http://github.com/adminfaces"
+      xmlns:p="http://primefaces.org/ui">
 
-    <ui:define name="head-end">
-        <ui:param name="renderBreadCrumb" value="false"/>
-    </ui:define>
+<f:view contentType="text/html">
+    <h:head>
+        <title>Provas</title>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon.ico']}"/>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon-16x16.png']}" sizes="16x16"/>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon-32x32.png']}" sizes="32x32"/>
+        <link rel="shortcut icon" type="image/x-icon" href="#{resource['favicon/favicon-96x96.png']}" sizes="96x96"/>
+        <link rel="manifest" href="/manifest.json"/>
+        <meta name="theme-color" content="#444"/>
+        <meta name="mobile-web-app-capable" content="yes"/>
+    </h:head>
 
-    <ui:define name="title">
-        <h2 class="align-center">
-            Bem vindo ao Provas!
-        </h2>
-    </ui:define>
+    <h:body styleClass="hold-transition login-page">
+        <div id="loader" class="load-bar" style="display: none">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
 
-</ui:composition>
+        <div class="login-box">
+            <div class="login-logo">
+                <p:link href="index.xhtml"><b>Provas</b></p:link>
+            </div>
+            <!-- /.login-logo -->
+            <div class="box login-box-body">
+                <h:form>
+                    <p class="login-box-msg">Sign in to start your session</p>
+                    <p:messages closable="true"/>
+
+                    <div class="form-group has-feedback">
+                        <p:inputText value="#{loginBean.username}" styleClass="form-control" placeholder="Username"
+                                     required="true"
+                                     requiredMessage="Username is required."
+                                     disabled="#{loginBean.authenticated}" />
+                        <i class="fa fa-envelope form-control-feedback"></i>
+                    </div>
+                    <div class="form-group has-feedback">
+                        <p:inputText value="#{loginBean.password}" type="password" styleClass="form-control"
+                                     placeholder="Just type any value" required="true"
+                                     requiredMessage="Password is required."
+                                     disabled="#{loginBean.authenticated}" />
+                       <i class="fa fa-lock form-control-feedback" ></i>
+                    </div>
+                    <div class="row">
+	                    <div class="col-xs-12">
+                            <p:commandButton styleClass="btn btn-success btn-block" action="#{loginBean.login}" onclick="showBar()" oncomplete="if(args.validationFailed){hideBar()}"
+                                             value="Sign In" update="@form" disabled="#{loginBean.authenticated}"/>
+	                    </div>
+                    </div>
+                </h:form>
+
+                <a href="#">I forgot my password</a><br/>
+                <a href="#" class="text-center">Register a new membership</a>
+
+            </div>
+            <!-- /.login-box-body -->
+        </div>
+        <adm:ripple />
+        <h:outputScript library="js" name="admintemplate.js" target="head"/>
+
+        <style type="text/css">
+            body .load-bar {
+                margin-top: -20px;
+            }
+        </style>
+    </h:body>
+</f:view>
+</html>
