--- a/src/main/webapp/user/dashboard.xhtml
+++ b/src/main/webapp/user/dashboard.xhtml
@@ -1,23 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html 
-	xmlns="http://www.w3.org/1999/xhtml" 
-	xmlns:h="http://java.sun.com/jsf/html" 
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-	
-	<h:head>
-		<title>Provas</title>
-	</h:head>
-	<h:body>
-		<h:form>
-			<ui:include src="/menu.xhtml"/>
-			<p:panel id="panel" header="Bem vindo!">
-				<p:messages id="messages" />
-				<p:button value="Voltar" href="/login" />
-			</p:panel>
-		</h:form>
-	</h:body>
-	
-</html>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                template="/WEB-INF/templates/template.xhtml">
+
+    <ui:define name="head-end">
+        <ui:param name="renderBreadCrumb" value="false"/>
+    </ui:define>
+
+</ui:composition>
