--- a/src/main/webapp/admin/menu/menu-list.xhtml
+++ b/src/main/webapp/admin/menu/menu-list.xhtml
@@ -17,7 +17,7 @@
     </ui:define>
 
     <ui:define name="title">
-        Menus
+        Lista de Menus
     </ui:define>
 
     <ui:define name="description">
@@ -48,11 +48,11 @@
                     </p:splitButton>
 
                     <p:separator/>
-<!--                     
-                    <p:dataTable widgetVar="carsTable" var="c" value="#{carListMB.cars}" rows="5"
-                                 rowKey="#{c.id}" lazy="true" paginator="true"
-                                 filteredValue="#{carListMB.filteredValue}"
-                                 paginatorPosition="bottom" selection="#{carListMB.selectedCars}"
+                     
+                    <p:dataTable widgetVar="menusTable" var="m" value="#{menuBean.menus}" rows="5"
+                                 rowKey="#{m.id}" lazy="true" paginator="true"
+                                 filteredValue="#{menuBean.filteredValue}"
+                                 paginatorPosition="bottom" selection="#{menuBean.selectedMenus}"
                                  paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown} {JumpToPageDropdown}"
                                  currentPageReportTemplate="[ {startRecord} to {endRecord} of {totalRecords} ]"
                                  rowsPerPageTemplate="5,10,15,20,30"
@@ -65,11 +65,11 @@
 
 
                         <f:facet name="header">
-                            Find Car by id: <p:inputText id="inptId" value="#{carListMB.id}"/>
+                            Consulte um menu pelo id: <p:inputText id="inptId" value="#{menuBean.id}"/>
                             <p:spacer height="5"/>
                             <p:commandButton id="brFind"
-                                             value="Find"
-                                             action="#{carListMB.findCarById(carListMB.id)}"
+                                             value="Consultar"
+                                             action="#{menuBean.consultarMenuPorId(menuBean.id)}"
                                              process="@form"
                                              update="@form"
                                              styleClass="btn-flat bg-black"
@@ -77,40 +77,22 @@
                         </f:facet>
                         <p:column selectionMode="multiple" width="5%" styleClass="align-center"/>
 
-                        <p:column headerText="Model" filterBy="#{c.model}" sortBy="#{c.model}"
-                                  filterMatchMode="contains">
+                        <p:column headerText="Model" filterBy="#{m.name}" sortBy="#{m.name}" filterMatchMode="contains">
                             <f:facet name="filter">
-                                <p:autoComplete value="#{carListMB.filter.entity.model}" forceSelection="true"
+                                <p:autoComplete value="#{menuBean.filter.entity.name}" forceSelection="true"
                                                 minQueryLength="2" queryDelay="500"
-                                                completeMethod="#{carListMB.completeModel}" maxResults="10">
+                                                completeMethod="#{menuBean.completeModel}" maxResults="10">
                                     <p:ajax event="itemSelect" process="@this" update="@none"
-                                            oncomplete="PF('carsTable').filter()"/>
+                                            oncomplete="PF('menusTable').filter()"/>
                                 </p:autoComplete>
                             </f:facet>
-                             <p:link value="#{c.model}" outcome="car-form.xhtml" >
-                                <f:param name="id" value="#{c.id}"/>
+                             <p:link value="#{m.name}" outcome="menu-form.xhtml" >
+                                <f:param name="id" value="#{m.id}"/>
                             </p:link>
 
                         </p:column>
-                        <p:column headerText="Name" sortBy="#{c.name}" filterBy="#{c.name}">
-                            <f:facet name="filter">
-                                <p:inputText value="#{carListMB.filter.entity.name}">
-                                    <p:ajax process="@this" update="@none" oncomplete="PF('carsTable').filter()"/>
-                                </p:inputText>
-                            </f:facet>
-                            #{c.name}
-                        </p:column>
-                        <p:column headerText="Price" sortBy="#{c.price}" filterBy="#{c.price}">
-                            <f:facet name="filter">
-                                <p:spinner value="#{carListMB.filter.entity.price}">
-                                    <f:converter converterId="javax.faces.Double"/>
-                                    <p:ajax process="@this" update="@none" oncomplete="PF('carsTable').filter()"/>
-                                </p:spinner>
-                            </f:facet>
-                            #{c.price}
-                        </p:column>
                     </p:dataTable>
--->                    
+                    
                 </div>
             </div>
             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade" styleClass="box-danger">
